--- a/app/src/main/res/layout/activity_notification_view.xml
+++ b/app/src/main/res/layout/activity_notification_view.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NotificationView">
+    tools:context=".activity.NotificationActivity">
 
     <TextView
         android:id="@+id/AlertText"
