--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="Gwhite">#F5F7F8</color>
+    <color name="blue">#2196F3</color>
+    <color name="gray">#B3B5B6</color>
+    <color name="light_gray">#E8E8E8</color>
 </resources>
