--- a/app/src/main/res/navigation/menu_navigation.xml
+++ b/app/src/main/res/navigation/menu_navigation.xml
@@ -10,4 +10,14 @@
         android:name="com.example.tickets_2.fragment.FilterFragment"
         android:label="fragment_filter"
         tools:layout="@layout/fragment_filter" />
+    <fragment
+        android:id="@+id/searchFragment"
+        android:name="com.example.tickets_2.fragment.SearchFragment"
+        android:label="fragment_search"
+        tools:layout="@layout/fragment_search" />
+    <fragment
+        android:id="@+id/notificationFragment"
+        android:name="com.example.tickets_2.fragment.NotificationFragment"
+        android:label="fragment_notification"
+        tools:layout="@layout/fragment_notification" />
 </navigation>
